--- a/index.css
+++ b/index.css
@@ -15,6 +15,9 @@ body {
     #container {
         max-width: 90%;
     }
+    .measure-box {
+        max-width: 90%;
+    }
 }
 
 #input-container {
