--- a/index.css
+++ b/index.css
@@ -89,6 +89,7 @@ input[type=number]:focus {
     border-radius: 5px;
     padding: 15px 30px;
     width: 500px;
+    box-sizing: border-box;
 }
 
 h2 {
